--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       }
 
       // Connexion mobile (deep link)
-      function connectMobile() {
+function connectMobile() {
   try {
     statusDiv.innerText = "📱 Tentative d'ouverture de Phantom...";
 
@@ -163,7 +163,7 @@
 
     console.log("Deep link:", deepLink);
 
-    // Création d'un <a> et click programmatique (meilleure compatibilité)
+    // Création d'un <a> et click programmatique
     const a = document.createElement('a');
     a.href = deepLink;
     a.rel = "noopener noreferrer";
@@ -181,6 +181,37 @@
     };
     document.addEventListener('visibilitychange', visibilityHandler, { once: true });
 
+    // Fallback si l'app ne s'ouvre pas
+    const fallback = setTimeout(() => {
+      if (opened) return;
+      if (/Android/i.test(navigator.userAgent)) {
+        const intentLink = `intent://phantom.app/ul/v1/connect?dapp_encryption_public_key=${dappPublicKeyB58}&app_url=${appUrl}&redirect_link=${redirectLink}&cluster=mainnet-beta#Intent;package=com.phantom.app;scheme=https;end`;
+        console.log("Intent fallback:", intentLink);
+        window.location.href = intentLink;
+      } else {
+        statusDiv.innerText = "Si Phantom ne s'ouvre pas, ouvre la page dans Safari ou ouvre Phantom manuellement.";
+      }
+    }, 1200);
+
+    // Nettoyage après délai
+    setTimeout(() => {
+      document.removeEventListener('visibilitychange', visibilityHandler);
+      clearTimeout(fallback);
+      try { a.remove(); } catch(e){}
+      if (!opened) {
+        statusDiv.innerText = "Impossible d'ouvrir Phantom automatiquement. Ouvre l'app Phantom et reviens sur cette page.";
+      }
+    }, 6000);
+
+    // Déclenche le click
+    a.click();
+
+  } catch (err) {
+    console.error("connectMobile error:", err);
+    statusDiv.innerText = "Erreur redirection mobile: " + (err?.message || err);
+  }
+} 
+      
     // Fallback si l'app ne s'ouvre pas
     const fallback = setTimeout(() => {
       if (opened) return;
