--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       }
 
       // Connexion mobile (deep link)
-function connectMobile() {
+  function connectMobile() {
   try {
     statusDiv.innerText = "📱 Tentative d'ouverture de Phantom...";
 
@@ -246,9 +246,16 @@ function connectMobile() {
     statusDiv.innerText = "Erreur redirection mobile: " + (err?.message || err);
   }
       }
-      
-
-      // Déchiffre le retour Phantom (connexion ou signature)
+   connectBtn.addEventListener('click', (e) => {
+  e.preventDefault();
+  if (/Android|iPhone|iPad|iPod/i.test(navigator.userAgent)) {
+    connectMobile(); // deep link vers l’app
+  } else {
+    connectDesktop(); // extension Phantom
+  }
+});
+    
+    // Déchiffre le retour Phantom (connexion ou signature)
       function handlePhantomReturn() {
         try {
           const params = new URLSearchParams(window.location.search);
